--- a/src/components/Users/UsersList.module.css
+++ b/src/components/Users/UsersList.module.css
@@ -14,3 +14,17 @@
     margin: 0.5rem 0;
     padding: 0.5rem;
   }
+
+  .emptyListContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+     margin: 2rem auto;
+    background-color: #f5f5f5; 
+    border-radius: 10px;
+  }
+  
+  .emptyListText {
+    color: black; 
+    font-size: 15px; 
+  }
